--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+	"deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -16,6 +17,7 @@
     "@nuxtjs/i18n": "^8.3.1",
     "@pinia/nuxt": "^0.5.1",
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
     "lz-string": "^1.5.0",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
