--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-	"deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
+    "deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -20,6 +20,7 @@
     "gh-pages": "^6.1.1",
     "lz-string": "^1.5.0",
     "nuxt": "^3.11.2",
+    "nuxt-gtag": "^3.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
