--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
-  },
-  "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/vue-fontawesome": "^3.0.6",
-    "@nuxtjs/i18n": "^8.3.1",
-    "@pinia/nuxt": "^0.5.1",
-    "bootstrap": "^5.3.3",
-    "gh-pages": "^6.1.1",
-    "lz-string": "^1.5.0",
-    "nuxt": "^3.11.2",
-    "nuxt-gtag": "^3.0.1",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
+	},
+	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"@fortawesome/vue-fontawesome": "^3.0.8",
+		"@nuxtjs/i18n": "^9.0.0",
+		"@pinia/nuxt": "^0.7.0",
+		"bootstrap": "^5.3.3",
+		"gh-pages": "^6.2.0",
+		"lz-string": "^1.5.0",
+		"nuxt": "^3.14.159",
+		"nuxt-gtag": "^3.0.1",
+		"pinia": "^2.2.6",
+		"vue": "latest",
+		"vue-router": "latest"
+	},
+	"overrides": {
+		"vue": "latest"
+	}
 }
