--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
-		"deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
+		"deploy": "deploy && nuxt generate && gh-pages --dotfiles -d .output/public"
 	},
 	"dependencies": {
 		"@iconify-json/lucide": "^1.2.39",
@@ -18,6 +18,7 @@
 		"gh-pages": "^6.3.0",
 		"lz-string": "^1.5.0",
 		"nuxt": "^3.17.1",
+		"nuxt-gtag": "^3.0.2",
 		"pinia": "^3.0.2",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.1"
